# nest_temperature_forwarder

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  grafana_dashboard.json  init-influxdb.sh  pyproject.toml  requirements.txt  temperature_forwarder.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: deploy.yaml  master.yaml
deploy/: migrate.sh  serviceaccount.yaml
deploy/nest-temperature-forwarder/: Chart.yaml  values.yaml
deploy/nest-temperature-forwarder/charts/: influxdb2-2.0.0.tgz
deploy/nest-temperature-forwarder/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  serviceaccount.yaml
