[project]
name = "nest-temperature-forwarder"
version = "1.0.0"
description = "Get metrics from the nest API and put them into influxdb"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "influxdb-client[ciso]>=1.50.0",
    "requests>=2.34.2",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
